--- a/primeNumbersInArray/arrowMethod/index.html
+++ b/primeNumbersInArray/arrowMethod/index.html
@@ -17,7 +17,7 @@
     <button class="btn" onclick="res()">Check Me</button>
   </div>
   <div class="result">
-    <span id="res">The Odd numbers are</span>
+    <span id="res">The Prime numbers are</span>
     <span id="answer"></span>
   </div>
   <script src="script.js"></script>
